# tlm_markers

./: README.md  T32TQM_20241115T100159_B03_10m.jp2  T32TQM_20241115T100159_B03_10m_with_TLM.jp2  T38SND_20250527T073631_B03_10m_with_TLM.jp2  benchmark_table.sh  generate_plots.py  launch_all_tlm.sh
CDSE/DS2/S2C_MSIL1C_20250527T073631_N0511_R092_T38SND_20250527T093652.SAFE/: INSPIRE.xml  MTD_MSIL1C.xml  manifest.safe
CDSE/DS2/S2C_MSIL2A_20250527T073631_N0511_R092_T38SND_20250527T113212.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml  manifest.safe
outputs/DS2/: S2_L2_ORCH_20250718T150233.out
outputs/DS2/JobOrders/: FORMAT_METADATA_DS_L2A_JobOrder.xml  FORMAT_METADATA_TL_L2A_JobOrder.xml  INV_MTD_DS_L2A_JobOrder.xml  JobOrder_COMPRESS_TILE_L2A.xml  JobOrder_OLQC_DS.xml  JobOrder_SEN2COR_DS.xml  JobOrder_SEN2COR_TL.xml  L2A_INV_MTD_TL_JobOrder.xml  L2A_OLQC_TL_JobOrder.xml
outputs_nbTile1_IPFL2/: S2_L2_ORCH_20250821T083831.out
outputs_nbTile1_IPFL2/JobOrders/: FORMAT_METADATA_DS_L2A_JobOrder.xml  FORMAT_METADATA_TL_L2A_JobOrder.xml  INV_MTD_DS_L2A_JobOrder.xml  JobOrder_COMPRESS_TILE_L2A.xml  JobOrder_OLQC_DS.xml  JobOrder_SEN2COR_DS.xml  JobOrder_SEN2COR_TL.xml  L2A_INV_MTD_TL_JobOrder.xml  L2A_OLQC_TL_JobOrder.xml
outputs_nbTile1_IPFL2/S2_L2_ORCH/FORMAT_METADATA_DS_L2A/: report.xml
outputs_nbTile1_IPFL2/S2_L2_ORCH/FORMAT_METADATA_TILE_L2A/: report.xml
s2tlm-indexer/: Cargo.toml  Dockerfile  README.md
s2tlm-indexer/indexer/: Cargo.toml
s2tlm-indexer/indexer-singlejp2/: Cargo.toml
s2tlm-indexer/indexer-singlejp2/src/: main.rs
s2tlm-indexer/indexer/src/: lib.rs  (+2 more)
(+271 files in other folders)
