[package]
name = "indexer-singlejp2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.5.0"
opendal = { version = "0.52.0", features = ["services-fs", "executors-tokio"] }
log = "0.4.22"
anyhow = "1.0.94"
indexer = { path = "../indexer" }
clap = { version = "4.5.32", features = ["derive"] }
